# lice

./: CMakeLists.txt  CouchDBInterface.cc  CouchDBInterface.hh  JSON.cc  JSON.hh  Lice.cc  Lice.hh  Makefile  MemstreamInterface.cc  MemstreamInterface.hh  README  getP8Sensor.cc
